--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "framer-motion": "^11.18.1",
+    "jwt-decode": "^4.0.0",
     "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
